# Trein-Informatie-Systeem

./: .env  .gitignore  README.md  Test.py  ffmpeg_helper.py  main.py  models.py  ns_api.py  ns_api_example.py  pygame_audio_example.py  pyproject.toml
