[project]
name = "eoq-2-example-code"
version = "0.1.0"
description = ""
authors = [
    {name = "WindowsS112",email = "jouw-email@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
